[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/carro/carro_2.png" type="Texture" id=1]
[ext_resource path="res://art/carro/carro_3.png" type="Texture" id=2]
[ext_resource path="res://art/carro/carro_1.png" type="Texture" id=3]
[ext_resource path="res://art/carro/carro_4.png" type="Texture" id=4]
[ext_resource path="res://scripts/Carro.gd" type="Script" id=5]
[ext_resource path="res://art/carro/WhatsApp_Image_2022-10-09_at_19.53.39-removebg-preview.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "carro1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "carro2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 313, 85 )

[node name="Carro" type="Area2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "carro2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 0, -75 )
shape = SubResource( 2 )

[node name="StopTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MovingTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_Carro_body_entered"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="MovingTimer" to="." method="_on_MovingTimer_timeout"]
